# fastapi-couchdb-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yaml
app/: .env_template  main.py  settings.py
src/: main.py
src/api/: .env_template  databases.py  models.py  routers.py  settings.py
src/security/: routers.py
src/tests/: conftest.py  pytest.ini  test_main.py  test_utils.py
tests/: test_utils.py
