[tool.poetry]
name = "fastapi-couchdb-app"
version = "0.1.0"
description = "A REST API built on top of Python, FastAPI and CouchDB"
authors = ["garibaldiviolin"]

[tool.poetry.dependencies]
python = "^3.11.4"
uvicorn = "^0.23.2"
fastapi = "^0.101.1"
python-decouple = "^3.8"
pytest = "^7.4.0"
aiocouch = "^3.0.0"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
