[tool.poetry]
name = "fastapi-couchdb-app"
version = "0.1.0"
description = "A REST API built on top of Python, FastAPI and CouchDB"
authors = ["garibaldiviolin"]

[tool.poetry.dependencies]
python = "^3.11.4"
uvicorn = "^0.23.2"
fastapi = "^0.101.1"
python-decouple = "^3.8"
pytest = "^7.4.0"
aiocouch = "^3.0.0"
httpx = "^0.24.1"
pytest-env = "^1.0.1"
pytest-randomly = "^3.15.0"
pytest-cov = "^4.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
